# S-EE-M24

./: .gitignore  README.md
Section1/: MatrixMult.cpp  makefile
Section2/: Counter.cpp  makefile
Section3/: CMakeLists.txt
Section3/inc/: LinkedList.hpp  Person.hpp
Section3/src/: LinkedList.cpp  Main.cpp  Person.cpp
